--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,17 @@
      <div class="posts-container">
        <%@posts.each do |post|%>
        <%= link_to user_post_path(@users, post) do%>
-         
+          <div class="post-container">
+            <h3 class="post-title"><%= post.title %></h3>
+            <div class="post-details">
+              <p class="details"><%= post.text[0..100]... %></p>
+            </div>
+            <div class="comment-like-container">
+              <p class="coment-likes-data">
+                Comment: <%= post.comment_counter || 0 %>, Likes: <%= post.likes_counter || 0 %>
+              </p>
+            </div>
+          </div>
        <%end%>
        <%end%>
 
